# fcs-sim

./: .gitignore  DataUtils.hs  FcsCorr.hs  FcsSim.hs  HomArray.hs  Play.hs  Propagator.hs  Reflection.hs  RngBenchmark.hs  RunSim.hs  Types.hs  default.nix  fcs-sim.cabal  plot-corr.py  plot.py
