name:                fcs-sim
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable fcs-sim
  main-is:             RunSim.hs
  other-extensions:    RecordWildCards, BangPatterns, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving, TypeFamilies, ExistentialQuantification, RankNTypes
  ghc-options:         -threaded
  build-depends:       base >=4.6 && <4.9,
                       mtl,
                       vector >=0.10 && <0.11,
                       random-fu >=0.2 && <0.3,
                       transformers >=0.3 && <0.5,
                       linear >=1.3 && <1.19,
                       mwc-random >=0.13 && <0.14,
                       statistics >=0.10 && <0.14,
                       pipes >=4.0 && <4.2,
                       lens >=4.0 && <4.10,
                       monad-primitive >=0.1 && <0.2,
                       mmorph >=1.0 && <1.1,
                       pipes-vector >=0.5 && <0.7,
                       cassava >=0.3 && <0.5,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.5 && <0.7,
                       text >=0.11 && <2.0
  default-language:    Haskell2010

executable fcs-sim-corr
  main-is:             FcsCorr.hs
  other-extensions:    RecordWildCards, BangPatterns, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving, TypeFamilies, ExistentialQuantification, RankNTypes
  ghc-options:         -threaded
  build-depends:       base >=4.6 && <4.9,
                       mtl,
                       vector >=0.10 && <0.11,
                       random-fu >=0.2 && <0.3,
                       transformers >=0.3 && <0.5,
                       linear >=1.3 && <1.19,
                       mwc-random >=0.13 && <0.14,
                       statistics >=0.10 && <0.14,
                       pipes >=4.0 && <4.2,
                       lens >=4.0 && <4.10,
                       monad-primitive >=0.1 && <0.2,
                       mmorph >=1.0 && <1.1,
                       pipes-vector >=0.5 && <0.7,
                       cassava >=0.3 && <0.5,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.5 && <0.7,
                       text >=0.11 && <2.0,
                       pipes-concurrency,
                       async
  default-language:    Haskell2010
