name:                fcs-sim
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable fcs-sim
  main-is:             RunSim.hs
  other-modules:       FcsSim, Types
  other-extensions:    RecordWildCards, BangPatterns, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving, TypeFamilies, ExistentialQuantification, RankNTypes
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.6 && <4.12,
                       mtl,
                       vector >=0.10 && <0.13,
                       random-fu >=0.2 && <0.3,
                       transformers >=0.3 && <0.6,
                       linear >=1.3 && <1.22,
                       mwc-random >=0.13 && <0.14,
                       statistics >=0.10 && <0.15,
                       pipes >=4.0 && <4.5,
                       lens >=4.0 && <4.17,
                       mmorph >=1.0 && <1.2,
                       pipes-vector >=0.5 && <0.7,
                       cassava >=0.3 && <0.7,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.5 && <0.7,
                       text >=0.11 && <2.0
  default-language:    Haskell2010

executable fcs-sim-corr
  main-is:             FcsCorr.hs
  other-modules:       FcsSim, Types
  other-extensions:    RecordWildCards, BangPatterns, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving, TypeFamilies, ExistentialQuantification, RankNTypes
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       mtl,
                       vector,
                       random-fu >=0.2 && <0.3,
                       transformers >=0.3 && <0.6,
                       linear >=1.3 && <1.22,
                       mwc-random >=0.13 && <0.14,
                       statistics,
                       pipes,
                       lens,
                       mmorph,
                       pipes-vector >=0.5 && <0.7,
                       cassava,
                       bytestring >=0.10 && <0.11,
                       primitive >=0.5 && <0.7,
                       text >=0.11 && <2.0,
                       optparse-applicative,
                       pipes-concurrency,
                       async
  default-language:    Haskell2010

executable play
  main-is:             Play.hs
  other-modules:       Reflection, Propagator, Types
  other-extensions:    RecordWildCards, BangPatterns, FlexibleContexts, FlexibleInstances, MultiParamTypeClasses, GeneralizedNewtypeDeriving, TypeFamilies, ExistentialQuantification, RankNTypes
  ghc-options:         -Wall -threaded -rtsopts -O2 -ddump-stg -ddump-to-file -dsuppress-idinfo
  build-depends:       base,
                       vector,
                       ascii-progress,
                       random-fu >=0.2 && <0.3,
                       transformers >=0.3 && <0.6,
                       linear >=1.3 && <1.22,
                       mwc-random >=0.13 && <0.14,
                       mwc-random-monad >= 0.7.3,
                       deepseq,
                       monad-primitive,
                       streaming,
                       statistics,
                       lens,
                       primitive >=0.5 && <0.7,
                       log-domain,
                       vector-th-unbox >= 0.2,
                       filepath,
                       directory,
                       QuickCheck,
                       optparse-applicative
  default-language:    Haskell2010